fixed alignment in img_title

--- a/styles.css
+++ b/styles.css
@@ -79,6 +79,7 @@ h2 {
 	font-size: 32px;
 	margin-top: 10px;
 	margin-bottom: 10px;
+	text-align: center;
 }
 
 h2::selection {
